clean the notebook

--- a/deploying_model_on_vertex_ai.ipynb
+++ b/deploying_model_on_vertex_ai.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fce813ac",
+   "id": "da2e7df7",
    "metadata": {},
    "source": [
     "# Deploying an ML model on Vertex AI\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "996010b6",
+   "id": "e97cd3a1",
    "metadata": {},
    "source": [
     "<table align=\"left\">\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bcfe7fb",
+   "id": "a251eb7f",
    "metadata": {},
    "source": [
     "## Prerequisites\n",
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "029bf24f",
+   "id": "db2c291f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad9dbce5",
+   "id": "b8fa38f2",
    "metadata": {},
    "source": [
     "## Print tensorflow version"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a91fb811",
+   "id": "f75278d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94b868cf",
+   "id": "6c9d7ac4",
    "metadata": {},
    "source": [
     "## Authenticate to GCP"
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99ab083e",
+   "id": "623b7d0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18d472ab",
+   "id": "b1baa679",
    "metadata": {},
    "source": [
     "## Importing required libraries"
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a577ce4",
+   "id": "ecbf5f39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed17d7cf",
+   "id": "060eacac",
    "metadata": {},
    "source": [
     "## Setting environment variables"
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a45adc9c",
+   "id": "a10bd77a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a1a0644",
+   "id": "835b7351",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "198cbf4d",
+   "id": "483765d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "169b942c",
+   "id": "a0b4c580",
    "metadata": {},
    "source": [
     "## Downloading the dataset\n",
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0eb78c68",
+   "id": "d8145b72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23a75aca",
+   "id": "f7cfb35b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57ca335e",
+   "id": "b8803638",
    "metadata": {},
    "source": [
     "## Create a GCS bucket"
@@ -247,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68507238",
+   "id": "572a8990",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a7374e0",
+   "id": "0fef6413",
    "metadata": {},
    "source": [
     "## Copy the data"
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9653149",
+   "id": "c84a8296",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ce70bfe",
+   "id": "7e9cd36d",
    "metadata": {},
    "source": [
     "## Data on Vertex AI\n",
@@ -306,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac3d0508",
+   "id": "ce1ad337",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c57c2664",
+   "id": "1ed41e3a",
    "metadata": {},
    "source": [
     "## Creating Vertex AI compatible instances"
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99d0604f",
+   "id": "1e4fb229",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07d17eeb",
+   "id": "52b9bdfd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +452,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "7b1c9dd1",
+   "id": "b68c67f1",
    "metadata": {},
    "source": [
     "## Writing the data to GCS\n",
@@ -463,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1cfb203d",
+   "id": "36316dc4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed1cca1b",
+   "id": "ff1556d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cea03cf",
+   "id": "759d8443",
    "metadata": {},
    "source": [
     "## Vertex AI specific constants"
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "305f0450",
+   "id": "abbb5d47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +512,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "df78ac9d",
+   "id": "062d9f95",
    "metadata": {},
    "source": [
     "## Creating a Vertex AI dataset\n",
@@ -523,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44400fd7",
+   "id": "59e54922",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -531,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "289c9fc9",
+   "id": "58348713",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72db7155",
+   "id": "17767558",
    "metadata": {},
    "source": [
     "## Training a model \n",
@@ -584,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7917dbca",
+   "id": "bcbef078",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82a1baff",
+   "id": "fbbb4518",
    "metadata": {},
    "source": [
     "---\n",
@@ -634,7 +634,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3583be10",
+   "id": "aa48639a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,7 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69be9132",
+   "id": "76fa9baa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f1e0f59",
+   "id": "2db4a273",
    "metadata": {},
    "source": [
     "## Deploying a model endpoint"
@@ -677,12 +677,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "2ab01050",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "271650587943515006"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hash(\"thushan ganegedra\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "d756b866",
+   "id": "6394783c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ENDPOINT_ID = \"123456\"\n",
+    "\n",
+    "ENDPOINT_ID = \"\" #.e.g \"123456\"\n",
     "endpoint = aiplatform.Endpoint(endpoint_name=ENDPOINT_ID)\n",
     "endpoint.create(display_name=\"imdb-review-predict\", endpoint_id=ENDPOINT_ID)"
    ]
@@ -690,7 +712,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6d96094",
+   "id": "6d7a7a90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1782330",
+   "id": "c01cb5fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d041ab49",
+   "id": "45f413f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "edc3bef2",
+   "id": "0629af47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,7 +753,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb6cbc1e",
+   "id": "8ebee5f0",
    "metadata": {},
    "source": [
     "## Predicting using the deployed endpoint"
@@ -740,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f31210fa",
+   "id": "85a8d1d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,14 +786,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19f945e4",
+   "id": "a0f79aa9",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "30fd596f",
+   "id": "ac42fe09",
    "metadata": {},
    "source": [
     "## Cleanup"
@@ -780,7 +802,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e43b0158",
+   "id": "e8c5141b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -816,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "175cc60d",
+   "id": "4e2bea73",
    "metadata": {},
    "outputs": [],
    "source": [
