--- a/training_custom_model.ipynb
+++ b/training_custom_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "df132594",
+   "id": "02f9e07f",
    "metadata": {},
    "source": [
     "# Creating and training a custom model\n",
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21263592",
+   "id": "f8f75dc8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1e3bc9d",
+   "id": "ffe32b15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0e864ac",
+   "id": "d0559308",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,20 +55,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41cbd97a",
+   "id": "bc99e8c7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "PROJECT_ID = \"gcp-tf-review-classification\"\n",
-    "BUCKET_URI = \"gs://imdb-movie-review-dataset\" \n",
-    "MODEL_BUCKET_URI = \"gs://imdb-movie-review-models\" \n",
+    "PROJECT_ID = \"gdsc-tensorflow-workshop\"\n",
+    "BUCKET_URI = \"\" # e.g. gs://imdb-movie-review-dataset-thga\n",
+    "MODEL_BUCKET_URI = \"\" # e.g. \"gs://imdb-movie-review-models-thga\" \n",
     "REGION = \"us-central1\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3052024b",
+   "id": "ab7d0ad7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc139cbf",
+   "id": "28b1545d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61f69685",
+   "id": "7b52a7e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6e46636",
+   "id": "07cbbce8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "380ed827",
+   "id": "6c041a0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a3a9772",
+   "id": "f9f5710f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46b13515",
+   "id": "9c03592f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d75a602f",
+   "id": "ceeefca3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "259add08",
+   "id": "c9e7c9dd",
    "metadata": {},
    "source": [
     "## Downloading the base model from TFHub"
@@ -281,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0f6363f",
+   "id": "e4bb438b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7873b8b0",
+   "id": "31d33fa8",
    "metadata": {},
    "source": [
     "## Creating the full TensorFlow model"
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab095d9a",
+   "id": "dcf9f7b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bc65447",
+   "id": "fac885e3",
    "metadata": {},
    "source": [
     "## Create a TensorFlow dataset to train and validate the model"
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f514f31",
+   "id": "6f2a15e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6356147",
+   "id": "c65b2972",
    "metadata": {},
    "source": [
     "## Train the model"
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7f30461",
+   "id": "8b41560a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a36a55e",
+   "id": "aada50b0",
    "metadata": {},
    "source": [
     "## Upload the model to GCS"
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ab5f527",
+   "id": "7f77488b",
    "metadata": {},
    "outputs": [],
    "source": [
